--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,16 +338,16 @@
     justify-content: center;
     align-items: self-start;
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 0px;
     width: 100%;
-    padding: 20px 0px;
+    padding: 0px 0px;
     max-width: 1250px;
     z-index: +1;
 }
 
 #primaryDeck>.primaryDeck-parent>.primaryDeck-child {
     width: 100%;
-    max-width: 190px;
+    max-width: 210px;
     border-radius: 100px;
     display: flex;
     justify-content: center;
@@ -355,7 +355,9 @@
     flex-direction: column;
     border: 0px solid rgb(255, 255, 255);
     cursor: pointer;
+    transition: all 0.5s ease-in-out;
 }
+
 
 #primaryDeck>.primaryDeck-parent>.primaryDeck-child>p {
     font-family: 'Neutrif Pro';
@@ -368,9 +370,11 @@
     width: 100%;
 }
 
-#primaryDeck>.primaryDeck-parent>.primaryDeck-child:hover {}
-
-
+#primaryDeck>.primaryDeck-parent>.primaryDeck-child:hover{
+    transform: scale(0.9);
+    transition: all 0.4s ease-in-out;
+}
+ 
 
 /*
  ##############################
