--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,8 +356,7 @@
     align-items: center;
     flex-direction: column;
     border: 0px solid rgb(255, 255, 255);
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
+    cursor: pointer; 
 }
 
 
@@ -370,9 +369,10 @@
 
 #primaryDeck>.primaryDeck-parent>.primaryDeck-child>img {
     width: 100%;
+    transition: all 0.5s ease-in-out;
 }
 
-#primaryDeck>.primaryDeck-parent>.primaryDeck-child:hover{
+#primaryDeck>.primaryDeck-parent>.primaryDeck-child:hover img{
     transform: scale(0.9);
     transition: all 0.4s ease-in-out;
 }
