Tuesdady work done with vipash and shivam

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,6 +430,34 @@
 
 }
 
+#secondaryDeck3>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
+#secondaryDeck4>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
+#secondaryDeck5>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
+#secondaryDeck6>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
+#secondaryDeck7>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
+#secondaryDeck8>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
+#secondaryDeck9>.secondaryDeck-parent {
+    overflow: hidden;
+
+}
 
 
 
